buyer/static/styles/product_popup.css
.product-popup-container {
    position: fixed;
    z-index: 1;
    width: 100vw;
    height: 100vh;
    display: none;

    background-color: rgba(0, 0, 0, 0.4);
}

.product-popup-container .product-popup {
    position: absolute;
    bottom: 0;
    width: 100vw;
    max-height: 80vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    padding: 4vh 0 4vh 0;
    text-align: center;
    background-color: rgb(255, 255, 255);
    border-radius: 15px 15px 0 0;
    overflow: auto;
}

.product-popup-container .product-popup .image-container {
    width: 250px;
    display: flex;
    flex-direction: column;
    justify-content: center;

    padding: 0 40px 0 40px;
}

.product-popup-container .product-popup img {
    width: 100%;
}

.product-popup-container .product-popup .image-container h1 {
    margin: 15px 0 0 0;
    font-size: 25px;
    color: rgb(32, 32, 32);
}

.product-popup-container .product-popup .summaries {
    width: 50%;
    min-width: 200px;
    max-width: 700px;
    display: flex;
    flex-direction: column;
}

.product-popup-container .product-popup .summaries .summary {
    padding: 10px 20px 20px 20px    ;
    background-color: rgb(245, 245, 245);
    border: 1px solid rgb(190, 190, 190);
    border-radius: 10px;
}

.product-popup-container .product-popup .summaries .summary h1 {
    margin: 0 0 5px 0;
    font-size: 20px;
}

.product-popup-container .product-popup .summaries .summary p {
    margin: 0;
    font-size: 17px;
    line-height: 25px;
    text-align: left;
}

.product-popup-container .product-popup .summaries .spacer {
    margin: 10px auto 10px auto;
}

.product-popup-container .product-popup .specs-container {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    margin: 2vh 0 0 0;
}

.product-popup-container .product-popup .specs-container h1 {
    width: 100%;

    margin: 0 0 10px 0;
    font-size: 20px;
}

.product-popup-container .product-popup .specs-container .specs {
    max-width: 1400px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.product-popup-container .product-popup .specs .spec {
    display: flex;

    margin: 8px 20px 8px 20px;
    border: 1px solid rgb(150, 150, 150);
    border-radius: 10px;
}

.product-popup-container .product-popup .specs .spec .label h1 {
    width: unset;

    margin: 0;
    padding: 10px;
    font-size: 16px;
    font-weight: normal;
    color: rgb(25, 25, 25);
}

.product-popup-container .product-popup .specs .spec .value {
    background-color: rgb(245, 245, 245);
    border-radius: 0 10px 10px 0;
}

.product-popup-container .product-popup .specs .spec .value h1 {
    width: unset;

    margin: 0;
    padding: 10px;
    font-size: 16px;
    color: rgb(25, 25, 25);
    font-weight: normal;
}

@media only screen and (max-width: 715px) {
    .product-popup-container .product-popup .summaries {
        width: 95vw;
        min-width: unset;
        max-width: unset;

        padding: 0 2vw 0 2vw;
    }
}

@media only screen and (max-width: 550px) {
    .product-popup-container .product-popup .image-container {
        width: 200px;
    }

    .product-popup-container .product-popup .specs {
        padding-bottom: 17vh;
    }
}

